[gd_scene load_steps=18 format=3 uid="uid://b18m2cpwuiqoo"]

[ext_resource type="PackedScene" uid="uid://dgnwiptkmp1dl" path="res://nodes/block.tscn" id="1_0imon"]
[ext_resource type="Script" path="res://scenes/height_meter_scene.gd" id="1_mautb"]
[ext_resource type="PackedScene" uid="uid://coqnxgxr3nl2" path="res://nodes/player.tscn" id="2_xx1lh"]
[ext_resource type="Texture2D" uid="uid://cgvahxb1b3fef" path="res://assets/jump_experiment_background.png" id="3_kox50"]
[ext_resource type="Texture2D" uid="uid://blu06f1viutsw" path="res://assets/toggle_button_off.png" id="5_0wges"]
[ext_resource type="Texture2D" uid="uid://1hxhmjeee8a7" path="res://assets/toggle_button_on.png" id="6_d3fwl"]

[sub_resource type="FontFile" id="FontFile_5iqp5"]
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/15/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/14/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/13/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/15/0/ascent = 0.0
cache/0/15/0/descent = 0.0
cache/0/15/0/underline_position = 0.0
cache/0/15/0/underline_thickness = 0.0
cache/0/15/0/scale = 1.0
cache/0/15/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/15/0/kerning_overrides/15/0 = Vector2(0, 0)
cache/0/15/0/kerning_overrides/14/0 = Vector2(0, 0)
cache/0/15/0/kerning_overrides/13/0 = Vector2(0, 0)
cache/0/15/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/15/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/15/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/15/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/14/0/ascent = 0.0
cache/0/14/0/descent = 0.0
cache/0/14/0/underline_position = 0.0
cache/0/14/0/underline_thickness = 0.0
cache/0/14/0/scale = 1.0
cache/0/14/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/14/0/kerning_overrides/15/0 = Vector2(0, 0)
cache/0/14/0/kerning_overrides/14/0 = Vector2(0, 0)
cache/0/14/0/kerning_overrides/13/0 = Vector2(0, 0)
cache/0/14/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/14/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/14/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/14/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/13/0/ascent = 0.0
cache/0/13/0/descent = 0.0
cache/0/13/0/underline_position = 0.0
cache/0/13/0/underline_thickness = 0.0
cache/0/13/0/scale = 1.0
cache/0/13/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/13/0/kerning_overrides/15/0 = Vector2(0, 0)
cache/0/13/0/kerning_overrides/14/0 = Vector2(0, 0)
cache/0/13/0/kerning_overrides/13/0 = Vector2(0, 0)
cache/0/13/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/13/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/13/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/13/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/12/0/ascent = 0.0
cache/0/12/0/descent = 0.0
cache/0/12/0/underline_position = 0.0
cache/0/12/0/underline_thickness = 0.0
cache/0/12/0/scale = 1.0
cache/0/12/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/12/0/kerning_overrides/15/0 = Vector2(0, 0)
cache/0/12/0/kerning_overrides/14/0 = Vector2(0, 0)
cache/0/12/0/kerning_overrides/13/0 = Vector2(0, 0)
cache/0/12/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/12/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/12/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/12/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/11/0/ascent = 0.0
cache/0/11/0/descent = 0.0
cache/0/11/0/underline_position = 0.0
cache/0/11/0/underline_thickness = 0.0
cache/0/11/0/scale = 1.0
cache/0/11/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/15/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/14/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/13/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/10/0/ascent = 0.0
cache/0/10/0/descent = 0.0
cache/0/10/0/underline_position = 0.0
cache/0/10/0/underline_thickness = 0.0
cache/0/10/0/scale = 1.0
cache/0/10/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/15/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/14/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/13/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/9/0/ascent = 0.0
cache/0/9/0/descent = 0.0
cache/0/9/0/underline_position = 0.0
cache/0/9/0/underline_thickness = 0.0
cache/0/9/0/scale = 1.0
cache/0/9/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/15/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/14/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/13/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/9/0 = Vector2(0, 0)

[sub_resource type="LabelSettings" id="LabelSettings_epipp"]
font = SubResource("FontFile_5iqp5")
font_size = 9

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6npw3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bhkto"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8j44y"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_prmtq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uxwrw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7a7u2"]

[sub_resource type="InputEventKey" id="InputEventKey_yxabj"]
device = -1
keycode = 4194305

[sub_resource type="InputEventJoypadButton" id="InputEventJoypadButton_eqm1l"]
button_index = 6
pressed = true

[sub_resource type="Shortcut" id="Shortcut_mige3"]
events = [SubResource("InputEventKey_yxabj"), SubResource("InputEventJoypadButton_eqm1l")]

[node name="HeightMeterScene" type="Node2D"]
script = ExtResource("1_mautb")

[node name="block" parent="." instance=ExtResource("1_0imon")]
position = Vector2(8, 232)

[node name="block2" parent="." instance=ExtResource("1_0imon")]
position = Vector2(24, 232)

[node name="block3" parent="." instance=ExtResource("1_0imon")]
position = Vector2(40, 232)

[node name="block4" parent="." instance=ExtResource("1_0imon")]
position = Vector2(56, 232)

[node name="block5" parent="." instance=ExtResource("1_0imon")]
position = Vector2(72, 232)

[node name="block6" parent="." instance=ExtResource("1_0imon")]
position = Vector2(88, 232)

[node name="block7" parent="." instance=ExtResource("1_0imon")]
position = Vector2(104, 232)

[node name="block8" parent="." instance=ExtResource("1_0imon")]
position = Vector2(120, 232)

[node name="block9" parent="." instance=ExtResource("1_0imon")]
position = Vector2(136, 232)

[node name="block10" parent="." instance=ExtResource("1_0imon")]
position = Vector2(152, 232)

[node name="block11" parent="." instance=ExtResource("1_0imon")]
position = Vector2(168, 232)

[node name="block12" parent="." instance=ExtResource("1_0imon")]
position = Vector2(184, 232)

[node name="block13" parent="." instance=ExtResource("1_0imon")]
position = Vector2(200, 232)

[node name="block14" parent="." instance=ExtResource("1_0imon")]
position = Vector2(216, 232)

[node name="block15" parent="." instance=ExtResource("1_0imon")]
position = Vector2(232, 232)

[node name="block16" parent="." instance=ExtResource("1_0imon")]
position = Vector2(248, 232)

[node name="block17" parent="." instance=ExtResource("1_0imon")]
position = Vector2(264, 232)

[node name="block18" parent="." instance=ExtResource("1_0imon")]
position = Vector2(280, 232)

[node name="block19" parent="." instance=ExtResource("1_0imon")]
position = Vector2(296, 232)

[node name="block20" parent="." instance=ExtResource("1_0imon")]
position = Vector2(312, 232)

[node name="block21" parent="." instance=ExtResource("1_0imon")]
position = Vector2(328, 232)

[node name="block22" parent="." instance=ExtResource("1_0imon")]
position = Vector2(344, 232)

[node name="block23" parent="." instance=ExtResource("1_0imon")]
position = Vector2(360, 232)

[node name="block24" parent="." instance=ExtResource("1_0imon")]
position = Vector2(376, 232)

[node name="block25" parent="." instance=ExtResource("1_0imon")]
position = Vector2(392, 232)

[node name="Player" parent="." instance=ExtResource("2_xx1lh")]
z_index = 10
position = Vector2(56, 192)

[node name="JumpExperimentBackground" type="Sprite2D" parent="."]
position = Vector2(200, 104)
texture = ExtResource("3_kox50")

[node name="SettingsLabel" type="Label" parent="."]
offset_left = 248.0
offset_top = 1.0
offset_right = 400.0
offset_bottom = 224.0
label_settings = SubResource("LabelSettings_epipp")
autowrap_mode = 2

[node name="SettingsToggle" type="CheckButton" parent="."]
z_index = 11
offset_right = 41.0
offset_bottom = 37.0
theme_override_icons/checked = ExtResource("6_d3fwl")
theme_override_icons/unchecked = ExtResource("5_0wges")
theme_override_styles/normal = SubResource("StyleBoxEmpty_6npw3")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_bhkto")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_8j44y")
theme_override_styles/hover = SubResource("StyleBoxEmpty_prmtq")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_uxwrw")
theme_override_styles/focus = SubResource("StyleBoxEmpty_7a7u2")
shortcut = SubResource("Shortcut_mige3")
shortcut_feedback = false
shortcut_in_tooltip = false

[connection signal="toggled" from="SettingsToggle" to="." method="_on_settings_toggle_toggled"]
